[gd_scene load_steps=4 format=3 uid="uid://dqcg0otwem6xk"]

[ext_resource type="Script" uid="uid://bqdb86brrtdf2" path="res://player_2/player_2.gd" id="1_vwtb1"]
[ext_resource type="PackedScene" uid="uid://3ic2qqrugq3h" path="res://player_2/female_charter_2_model.tscn" id="2_vwtb1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vwtb1"]
radius = 0.18
height = 1.8254395

[node name="Player2" type="CharacterBody3D"]
script = ExtResource("1_vwtb1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.123168945, 0)
shape = SubResource("CapsuleShape3D_vwtb1")

[node name="demo_model" parent="." instance=ExtResource("2_vwtb1")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, -0.97526133, 0)

[node name="camera_suport" type="Node3D" parent="."]
top_level = true

[node name="SpringArm3D" type="SpringArm3D" parent="camera_suport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0)
spring_length = 3.0

[node name="Camera3D" type="Camera3D" parent="camera_suport/SpringArm3D"]
fov = 90.0
